Make sure that the entire shape is visible

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -12,3 +12,6 @@
   width: 160px
   height: 200px
   display: inline-block
+
+.shape__inner
+  overflow: visible
